# pixelflow

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DISTRIBUTION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  cifar10_reservoir.py  eikonal_study.py  gpu_speedup.py  mnist_reservoir.py
benchmarks/results/: cifar10_reservoir_20260424_184218.json  eikonal_study_20260424_184039.json  gpu_speedup_20260424_184313.json  gpu_speedup_20260424_184407.json  gpu_speedup_20260424_184514.json  mnist_reservoir_20260424_133404.json  mnist_reservoir_20260424_133432.json  mnist_reservoir_20260424_150122.json  mnist_reservoir_20260424_163856.json  mnist_reservoir_20260424_184906.json  mnist_reservoir_20260424_190800.json
docs/: API_CONTRACT.md  INTEGRATIONS.md  OUTREACH_DRAFTS.md  SUBMIT_PAPERWITHCODE.md  VISIBILITY_PLAN.md
examples/: cuda_speed_test.py  gpu_speed_test.py  quickstart.py
integrations/: awesome-entries.md
integrations/llamahub/: README.md  __init__.py  base.py  requirements.txt
integrations/open-webui/: README.md  pixelflow_tool.py
paper/: pixelflow_draft.md
paper/arxiv/: README.md  pixelflow.tex
pixelflow/: __init__.py
pixelflow/backends/: __init__.py  _moderngl_register.py  cpu.py  cuda_backend.py  moderngl_backend.py  moderngl_shaders.py
pixelflow/core/: __init__.py  encoding.py  reservoir.py  rules.py
pixelflow/readouts/: __init__.py  linear.py
pixelflow/tasks/: __init__.py  cifar10.py  (+3 more)
space/: DEPLOY.md  README.md  app.py  requirements.txt
tests/: conftest.py  test_core_smoke.py  test_cuda_backend.py  test_integration.py  test_moderngl_backend.py  test_readouts.py  test_tasks.py
