[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelflow"
version = "0.1.0"
description = "GPU Texture Reservoir Computing: fragment-shader cellular automata with linear readouts for image classification and PDE solving."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Francisco Angulo de Lafuente", email = "lareliquia.angulo@gmail.com" }]
requires-python = ">=3.10"
keywords = ["reservoir-computing", "gpu", "opengl", "cellular-automata", "neuromorphic", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "tqdm>=4.65",
]

[project.optional-dependencies]
gpu = ["moderngl>=5.10", "glfw>=2.6"]
cuda = ["cupy-cuda12x>=13.0"]
datasets = ["torchvision>=0.16", "pillow>=10.0"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.5", "black>=24.0"]
all = ["pixelflow[gpu,cuda,datasets,dev]"]

[project.urls]
Homepage = "https://github.com/Agnuxo1/pixelflow"
Repository = "https://github.com/Agnuxo1/pixelflow"
Issues = "https://github.com/Agnuxo1/pixelflow/issues"

[tool.setuptools.packages.find]
include = ["pixelflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
